[b]Version 0.5.62[/b] (not released yet):

(2007-11-06)
 * (Experimental internal change) Created a wrapper for the time and volume
   slider using QWidgetAction. Until now whenever a time or volume slider were
   needed (there are 3 time sliders and 3 volume sliders) each widget had to
   be created, set its properties, make connections...  individually = a lot 
   of duplicated code. Now only one object has to be created (one for the time
   slider, another one for the volume slider) and then it can be inserted in 
   any widget that accepts QAction's, as many times as necessary. 
   Less code and easier.

(2007-11-05)
 * Removed option H.264->Skip frames, as it affects non H.264 videos too.
   The option in the config file is still available.
 * Added again the "Fast audio track switching" in Preferences->Performance,
   with a combo to select the 3 possible values: Auto, Yes and No.
   There's included help for this option, so I won't explain here.
 * (By user request) Added a new option for the mouse wheel combo in 
   Preferences->Keyboard & mouse: "No function". If selected the mouse
   wheel will do nothing.

(2007-11-03)
 * Adapted the code for patch select_sub_by_source_property2.diff.

(2007-11-02)
 * Added the Greek translation sent by my80s <wamy80s@gmail.com>.

(2007-11-01)
 * Fixed a bug which prevented to select the first (or preferred) subtitle
   when playing a new video.
 * Now mplayerprocess can identify the mplayer version (or svn revision).
 * Added autodetection possibility for changing the font size of subtitles.
   Now the values for the config option "change_sub_scale_requires_restart"
   are different: -1 means autodetect, 0 = false, 1 = true (by default -1).
   Autodetect will check the mplayer version to know if it's recent enough
   to have the slave command "sub_scale". But autodetect can fail with very
   old versions of mplayer (< 1.0rc1).
 * Renamed "change_sub_scale_requires_restart" to 