@@ -288,5 +288,7 @@ src/verticaltext.cpp -text
 src/verticaltext.h -text
 src/videoequalizer.cpp -text
 src/videoequalizer.h -text
+src/widgetactions.cpp -text
+src/widgetactions.h -text
 src/winfileassoc.cpp -text
 src/winfileassoc.h -text
